[api] support filtering jobs by their state value in `GET /jobs`